samples/_failures_safe/1761298689_0445ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c733efec.c: In function ‘main’:
./samples/SAFE/__tmp_c733efec.c:184:5: error: expected expression at end of input
  184 |     tokenize(input,
      |     ^~~~~~~~
./samples/SAFE/__tmp_c733efec.c:184:5: error: expected declaration or statement at end of input
